added Mnemonic infra. as an alternative backed allocation mechanism, note that move allocator services to the service-dist folder as the properties indicated in pom.xml.